Pull request #823: AG-54351: Fix bug with color of description in statistics stories
Merge in SCITER/adguard-mini from AG-54351-statistics-stories-desc-color-bug to master

Squashed commit of the following:

commit ed947d93a1c7744f1e68c3ba6968f61ab2e1b48a
Author: Vladimir Bachinskiy <v.bachinskiy@adguard.com>
Date:   Fri May 15 14:56:57 2026 +0000

    StoriesConfig.module.pcss edited online with Bitbucket

commit 76d7db9fa385d35d049284dcac6626f6742b6462
Author: Vladislav Abdulmyanov <v.abdulmyanov@adguard.com>
Date:   Fri May 15 17:55:49 2026 +0300

    Consider issues

commit dbec4d2e7a36883fe7f7456f5ba0706668a48b4b
Merge: 0f8acbdc e02a9731
Author: Vladislav Abdulmyanov <v.abdulmyanov@adguard.com>
Date:   Fri May 15 17:53:14 2026 +0300

    Merge branch 'master' into AG-54351-statistics-stories-desc-color-bug

commit 0f8acbdc7f8a72dc904639407cbd2a0e744c1bdf
Author: Vladislav Abdulmyanov <v.abdulmyanov@adguard.com>
Date:   Fri May 15 17:49:04 2026 +0300

    AG-54351: Fix bug with color of description in statistics stories

--- a/AdguardMini/sciter-ui/modules/tray/modules/stories/hooks/useStoriesConfig/StoriesConfig.module.pcss
+++ b/AdguardMini/sciter-ui/modules/tray/modules/stories/hooks/useStoriesConfig/StoriesConfig.module.pcss
@@ -5,11 +5,15 @@
 
 .StoriesConfig {
     &_statistics {
+        color: var(--text-footer-footer-text-default);
         padding: var(--m-s);
 
         &_list {
-            >li {
+            color: inherit;
+
+            > li {
                 padding-left: 8px;
+                color: inherit;
             }
         }
     }
